BSAboutBlueSpice: Fixed wrong font family gets forced over link #6964
* Fixed wrong font family gets forced over the administration link in the left sidebar

=> Needs cherry-pick to REL1_27

--- a/AboutBlueSpice/resources/bluespice.aboutbluespice.css
+++ b/AboutBlueSpice/resources/bluespice.aboutbluespice.css
@@ -1,5 +1,6 @@
 
-#bs-nav-sections #n-aboutbluespice .icon24::before {
+#bs-nav-sections #n-aboutbluespice .icon24::before,
+#bs-admin-aboutbluespice::before {
 	font-family: 'bluespice-logo' !important;
 	content: "\e900";
 }
